# translator-jp

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
Docs/: API.md  (+10 more)
backend/: pyproject.toml  requirements.txt  translation.db
backend/app/: main.py
backend/app/api/routes/: fetch.py  glossary.py  health.py  history.py  translate.py
backend/app/core/: config.py  logging.py
backend/app/crawler/: pixiv_client.py  pixiv_parser.py  pixiv_types.py  url_validator.py
backend/app/db/: models.py  schema.sql  session.py
backend/app/llm/: litert_lm_client.py  ollama_client.py  prompts.py  translator.py
backend/app/schemas/: fetch.py  glossary.py  translation.py
backend/app/services/: cache.py  chunker.py  evaluator.py  fetch_service.py  glossary.py  history.py  language_detector.py  page_splitter.py
backend/tests/: conftest.py  test_cache.py  test_cache_multilang.py  test_cache_repository.py  test_chunk_repository.py  test_chunk_retry_api.py  test_chunker.py  test_fetch_api.py  test_fetch_translate_api.py  test_glossary.py  test_glossary_api.py  test_glossary_multilang.py  test_harness_multilang.py  test_harness_rule_checks.py  test_health.py  test_history_api.py  test_language_detector.py  test_litert_lm_client.py  test_litert_lm_translation_result.py  test_ollama_client.py  test_ollama_translation_result.py  test_page_splitter.py  test_page_translate_api.py  test_pixiv_parser.py  test_pixiv_url_validator.py  test_prompt_loader.py  test_translation_api.py  test_translation_repository.py  test_translator.py  test_translator_multilang.py
(+60 files in other folders)
